# codex_session_cleaner

./: .gitignore  NOTICE  README.md  pyproject.toml
docs/superpowers/specs/: 2026-03-30-codex-session-cleaner-design.md
src/codex_session_cleaner/: __init__.py  app.py  detail_pane.py  discovery.py  main.py  models.py  trash.py
tests/: test_app_logic.py  test_discovery.py  test_trash.py
