[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-session-cleaner"
version = "0.1.0"
description = "Textual TUI for reviewing and trashing local Codex sessions"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.62,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
codex-session-cleaner = "codex_session_cleaner.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
