[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-session-cleaner"
version = "0.1.0"
description = "Textual TUI for reviewing and trashing local Codex sessions"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "textual>=0.62,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
codex-session-cleaner = "codex_session_cleaner.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE", "NOTICE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
